--- a/app/views/sugar_pond/support/index.html.erb
+++ b/app/views/sugar_pond/support/index.html.erb
@@ -17,36 +17,13 @@ div#gsfn_list_widget div#gsfn_content p.gsfn_summary { margin-top: 2px }
   <h2>Problems?  Ideas?  Questions?  We're here to help.</h2>
   
     <p>You can talk to us via 
-	  <%= link_to "our community support forum", "http://getsatisfaction.com/sugarpond" %>, 
-	  powered by Get Satisfaction. 
-	  There, you'll be able to ask a
-	  question and get responses not only from our staff, but also other users.  (You can also post
-	  questions privately if you wish.)</p>
-	  
-	  <p>To get in touch with us via the forum, please use the form below.</p>
-	  
+	  <%= link_to "our community support forum", "https://github.com/nbudin/journey/issues" %>, 
+	  powered by GitHub.
+	  There, you'll be able to ask questions and respond to other users.</p>
+
+  <!--	
   <div style="max-width: 44em;">	  
-	  
-		<!--
-		Disabled for now, pending http://getsatisfaction.com/getsatisfaction/topics/cannot_get_topics_widget_to_display_my_products_topics?utm_medium=email&utm_source=share
-		<div id='gsfn_list_widget'>
-		<a href="http://getsatisfaction.com/getsatisfaction" class="widget_title">People are talking about...</a>
-		<div id='gsfn_content'>Loading...</div>
-		<div class='powered_by'>
-		<a href="http://getsatisfaction.com/"><img alt="Favicon" src="http://www.getsatisfaction.com/favicon.gif" style="vertical-align: middle;" /></a>
-		<a href="http://getsatisfaction.com/">Get Satisfaction support network</a>
-		</div>
-		</div>
-		<script src="http://getsatisfaction.com/getsatisfaction/widgets/javascripts/8a8efe5504/widgets.js" type="text/javascript"></script>
-		<script src="http://getsatisfaction.com/getsatisfaction/topics.widget?callback=gsfnTopicsCallback&amp;length=80&amp;limit=5&amp;sort=recently_active&amp;product=journey_journey_surveys" type="text/javascript"></script>
-		-->
-		
-		  <script type="text/javascript" charset="utf-8">
-		  var is_ssl = ("https:" == document.location.protocol);
-		  var asset_host = is_ssl ? "https://s3.amazonaws.com/getsatisfaction.com/" : "http://s3.amazonaws.com/getsatisfaction.com/";
-		  document.write(unescape("%3Cscript src='" + asset_host + "javascripts/feedback-v2.js' type='text/javascript'%3E%3C/script%3E"));
-		</script>
-		
+
 		<script type="text/javascript" charset="utf-8">
 		  var feedback_widget_options = {};
 		  feedback_widget_options.display = "inline";  
@@ -56,4 +33,5 @@ div#gsfn_list_widget div#gsfn_content p.gsfn_summary { margin-top: 2px }
 		  var feedback_widget = new GSFN.feedback_widget(feedback_widget_options);
 		</script>
 	</div>
+ 	-->
 </div>
